# USPolicyRAG

./: .gitignore  README.md  main.py  pyproject.toml
data/: AL_2026rs_bills.json
src/resources/: constants.yaml
src/router/: api_router.py  dataclasses.py  datamodels.py
src/services/: documents_handler.py  reranker.py  retrievers.py  service_handler.py  system_prompt.py  user_prompt.py
src/services/llms/: embedding.py  groq_llms.py  llm_factory.py  llm_interface.py  llm_protocols.py  llm_tools.py  openai_llms.py  output_formats.py  todo
src/utilities/: constants.py  customsingleton.py  helper.py  logger.py  opik_config.py  qdrant_vectordb.py
