[project]
name = "uspolicyrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.120.0",
    "langchain>=1.0.2",
    "langchain-community>=0.4",
    "langchain-core>=1.0.1",
    "pandas>=2.3.3",
    "pyyaml>=6.0.3",
    "qdrant-client>=1.15.1",
    "sentence-transformers>=5.1.2",
    "uvicorn>=0.38.0",
]
